--- a/main.css
+++ b/main.css
@@ -14,11 +14,11 @@ html {
   margin: 0; }
 
 body {
-  font-family: "Oxygen", sans-serif;
+  font-family: 'Oxygen', sans-serif;
   margin: 0;
   display: grid;
   grid-template-rows: auto 3.5rem auto fit-content(8rem);
-  grid-template-areas: "main-overview" "header" "main" "footer";
+  grid-template-areas: 'main-overview' 'header' 'main' 'footer';
   width: 100vw; }
 
 .main-overview {
@@ -73,22 +73,28 @@ body {
   background-color: var(--light-green); }
 
 .learn:hover,
-.contact:hover, .contact-width {
+.contact:hover,
+.contact-width {
   background-color: white;
   cursor: pointer; }
   .learn:hover a,
-  .contact:hover a, .contact-width a {
+  .contact:hover a,
+  .contact-width a {
     color: var(--light-green); }
 
-.contact, .learn {
+.contact,
+.learn {
   transition: background-color 0.2s linear 0.1s; }
-  .contact a, .learn a {
+  .contact a,
+  .learn a {
     transition: color 0.2s linear 0.1s; }
 
-.contact:active, .learn:active {
+.contact:active,
+.learn:active {
   background-color: #dd962a;
   border: 3px solid #aa782c; }
-  .contact:active a, .learn:active a {
+  .contact:active a,
+  .learn:active a {
     color: white; }
 
 .main-header {
@@ -305,7 +311,8 @@ main {
   justify-content: center;
   align-items: center;
   opacity: 0; }
-  .link h1, .link h3 {
+  .link h1,
+  .link h3 {
     color: rgba(255, 255, 255, 0.9); }
   .link .chain {
     border-radius: 50%;
@@ -399,7 +406,8 @@ main {
 .testimonial__box {
   display: -webkit-flex;
   display: flex; }
-  .testimonial__box p, .testimonial__box h3 {
+  .testimonial__box p,
+  .testimonial__box h3 {
     text-align: left; }
 
 .testimonial__image {
@@ -427,7 +435,8 @@ main {
   background: rgba(104, 207, 185, 0.596);
   transition: background-color 0.6s ease; }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: var(--light-green); }
 
 .section-div {
@@ -454,7 +463,7 @@ main {
         padding: 0.8rem; }
       .contact-container .info-div div ::placeholder {
         color: rgba(121, 118, 118, 0.644);
-        font-family: "Oxygen", sans-serif;
+        font-family: 'Oxygen', sans-serif;
         font-weight: bolder; }
 
 .contact__width {
@@ -469,7 +478,7 @@ main {
     border: 2px solid rgba(214, 214, 214, 0.4);
     border-radius: 5px;
     color: rgba(121, 118, 118, 0.644);
-    font-family: "Oxygen", sans-serif;
+    font-family: 'Oxygen', sans-serif;
     font-weight: bolder;
     padding: 0.5rem; }
 
@@ -520,12 +529,12 @@ main {
 
 @-webkit-keyframes fade {
   from {
-    opacity: .4; }
+    opacity: 0.4; }
   to {
     opacity: 1; } }
 @keyframes fade {
   from {
-    opacity: .4; }
+    opacity: 0.4; }
   to {
     opacity: 1; } }
 @media screen and (max-width: 768px) {
@@ -593,7 +602,8 @@ main {
   .mobile-nav {
     display: flex;
     padding: 0; }
-    .mobile-nav div, .mobile-nav button {
+    .mobile-nav div,
+    .mobile-nav button {
       margin: 2rem; }
 
   .section-container__grid {
