--- a/main.css
+++ b/main.css
@@ -486,10 +486,8 @@ main {
   grid-area: footer;
   padding: 2rem;
   display: -webkit-flex;
-  -webkit-flex-wrap: wrap;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   width: 100vw; }
 
