--- a/main.scss
+++ b/main.scss
@@ -626,6 +626,9 @@ body {
     margin: 0.5rem;
     width: 2.5rem;
     height: 2.5rem;
+    color: $white;
+  }
+  use {
     color: $black;
   }
 }
