--- a/main.css
+++ b/main.css
@@ -495,6 +495,8 @@ body {
   margin: 0.5rem;
   width: 2.5rem;
   height: 2.5rem;
+  color: white; }
+.iconred use {
   color: black; }
 
 @keyframes imagechange {
