--- a/main.css
+++ b/main.css
@@ -495,9 +495,9 @@ body {
   margin: 0.5rem;
   width: 2.5rem;
   height: 2.5rem;
-  color: white; }
+  background: black; }
 .iconred use {
-  color: black; }
+  color: white; }
 
 @keyframes imagechange {
   0% {
