--- a/main.scss
+++ b/main.scss
@@ -626,10 +626,10 @@ body {
     margin: 0.5rem;
     width: 2.5rem;
     height: 2.5rem;
-    color: $white;
+    background: $black;
   }
   use {
-    color: $black;
+    color: $white;
   }
 }
 
