--- a/main.css
+++ b/main.css
@@ -495,8 +495,11 @@ body {
   margin: 0.5rem;
   width: 2.5rem;
   height: 2.5rem;
+  color: black; }
+.iconred .be {
+  padding: 0.3rem;
   background: black; }
-.iconred use {
+.iconred .behance-use {
   color: white; }
 
 @keyframes imagechange {
