--- a/main.scss
+++ b/main.scss
@@ -626,9 +626,13 @@ body {
     margin: 0.5rem;
     width: 2.5rem;
     height: 2.5rem;
+    color: $black;
+  }
+  .be {
+    padding: 0.3rem;
     background: $black;
   }
-  use {
+  .behance-use {
     color: $white;
   }
 }
