--- a/main.css
+++ b/main.css
@@ -490,17 +490,19 @@ body {
   .icon-github .icon-use-github {
     color: white; }
 
-.iconred .icon-svg {
-  border-radius: 50%;
-  margin: 0.5rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  color: black; }
-.iconred .be {
-  padding: 0.3rem;
-  background: black; }
-.iconred .behance-use {
-  color: white; }
+.iconred {
+  background-color: white; }
+  .iconred .icon-svg {
+    border-radius: 50%;
+    margin: 0.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    color: black; }
+  .iconred .be {
+    padding: 0.3rem;
+    background: black; }
+  .iconred .behance-use {
+    color: white; }
 
 @keyframes imagechange {
   0% {
