--- a/main.scss
+++ b/main.scss
@@ -329,6 +329,13 @@ body {
     height: 2.5rem;
     color: $icon-team-hover;
   }
+  .be {
+    padding: 0.3rem;
+    background: $icon-team-hover;
+  }
+  .behance-use {
+    color: $team-hover-color;
+  }
   opacity: 0;
 }
 
