--- a/main.scss
+++ b/main.scss
@@ -645,6 +645,14 @@ body {
   }
 }
 
+.slide-ocult {
+  display: none;
+}
+
+.slide-visible {
+  display: flex;
+}
+
 @keyframes imagechange {
   0% {
     background: url('resources/home-bg-2.jpg') center/cover no-repeat
